--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,11 +1,21 @@
+@import "variables";
+
 html, body {
   height: 100%;
   width: 100%;
   font-size: 100%;
-  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  font-family: 'LatoWeb', sans-serif;
   text-align: center;
 }
 
 a{
   color: inherit;
+}
+
+h2 {
+  //font-family: 'LatoWebThin', sans-serif;
+  //font-weight: normal;
+  //font-weight: 100;
+
 }
